added corresponding swagger documentation for available routes
