# app/Http/Controllers/Authentication/LoginController.php
@@ -22,42 +22,27 @@ class LoginController extends Controller
      *   summary="Login A User Account",
      *   operationId="userLogin",
      *
-     *   @OA\Parameter(
-     *      name="email",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ),
-     *   @OA\Parameter(
-     *      name="password",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *          type="string"
-     *      )
-     *   ),
-     *   @OA\Response(
-     *      response=200,
-     *       description="Success"
-     *   ),
-     *   @OA\Response(
-     *      response=401,
-     *       description="Unauthenticated"
-     *   ),
-     *   @OA\Response(
-     *      response=500,
-     *      description="Internal Server Error"
-     *   ),
-     *   @OA\Response(
-     *      response=404,
-     *      description="Page Not found"
-     *   ),
-     *      @OA\Response(
-     *          response=422,
-     *          description="Unprocessable Entity"
-     *      )
+     *   @OA\Parameter(name="email",in="query",required=true,@OA\Schema(type="string")),
+     *   @OA\Parameter(name="password",in="query",required=true,@OA\Schema(type="string")),
+     *   @OA\Response(response=200,description="Success"),
+     *   @OA\Response(response=401,description="Unauthenticated"),
+     *   @OA\Response(response=500,description="Internal Server Error"),
+     *   @OA\Response(response=404,description="Page Not found"),
+     *   @OA\Response(response=422,description="Unprocessable Entity")
+     *),
+     * @OA\Post(
+     ** path="/api/v1/admin/login",
+     *   tags={"Admin"},
+     *   summary="Login An Admin Account",
+     *   operationId="adminLogin",
+     *
+     *   @OA\Parameter(name="email",in="query",required=true,@OA\Schema(type="string")),
+     *   @OA\Parameter(name="password",in="query",required=true,@OA\Schema(type="string")),
+     *   @OA\Response(response=200,description="Success"),
+     *   @OA\Response(response=401,description="Unauthenticated"),
+     *   @OA\Response(response=500,description="Internal Server Error"),
+     *   @OA\Response(response=404,description="Page Not found"),
+     *   @OA\Response(response=422,description="Unprocessable Entity")
      *)
      **/
     public function __invoke(UserLoginRequest $request, LoginUserAction $loginUserAction, IssueJwtTokenAction $issueJwtTokenAction)
